# epistemic-flow-control

./: .gitignore  CONTRIBUTING.md  LICENSE  LLM_LAYER_REVIEW.md  README.md  TRAINING_DATA_REQUIREMENTS.md  VALIDATION_PACKAGE.md  build_samples.py  live_test.py  pyproject.toml  requirements-demo.txt  requirements-dev.txt  requirements-llm.txt  requirements.txt  run_demo.sh  setup.py  unified_system.py  verify_system.py
.github/workflows/: ci.yml
concentration/: __init__.py  hhi_calculator.py  spof_detector.py
core/: __init__.py  event_store.py  pattern_database.py  pattern_extractor.py
drift/: __init__.py  drift_detector.py  embedding_tracker.py
examples/: __init__.py  alsup_case_study.py  concentration_scenarios.py  data_loader.py  drift_scenarios.py  events.py  judges.py  jurisdictions_data.py  normalization_cases.py  sources.py
gates/: __init__.py  review_gate.py
jurisdictions/: __init__.py  alsup.py  base.py  nd_cal.py
llm/: __init__.py  client.py  json_parser.py  rate_limit.py  retry.py
llm/providers/: __init__.py  anthropic.py  base.py
normalizers/: __init__.py  judge_normalizer.py  lawyer_normalizer.py
streamlit_demo/: __init__.py  app.py
streamlit_demo/components/: __init__.py  charts.py
streamlit_demo/pages/: 1_💧_Water_in_Sand.py  2_📊_Live_System.py  3_🎯_Pattern_Explorer.py  4_⚖️_Review_Gate.py  5_📈_Calibration.py  6_🔍_Entity_Normalization.py  7_⚠️_Concentration_Risk.py  8_📉_Pattern_Drift.py  9_⚖️_Jurisdictional_Context.py
test_data/: calibration.db  events.db  gate.db  patterns.db  training.db
tests/: __init__.py  test_llm_integration.py
training/: __init__.py  data_generator.py
validation/: __init__.py  calibration_engine.py
